# sigil-ml

./: .gitignore  .pyre_configuration  CLAUDE.md  Makefile  README.md  prd.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
.kittify/: metadata.yaml
.kittify/memory/: constitution.md
.pyre/taint_models/: sources_sinks.pysa  taint.config
Formula/: sigil-ml.rb
docs/: SIGILD_CLOUD_ENHANCEMENTS.md  SIGIL_CLOUD_ARCHITECTURE.md  openapi.json  plan.md
kitty-specs/001-cloud-serving-mode/: meta.json  tasks.md
kitty-specs/001-cloud-serving-mode/tasks/: WP01-serving-mode-enum-cli.md  WP02-stateless-prediction-endpoints.md  WP03-tenant-context-middleware.md  WP04-model-cache-ttl.md  WP05-tenant-model-loading-fallback.md  WP06-health-status-observability.md
kitty-specs/002-storage-abstraction/: meta.json  tasks.md
kitty-specs/002-storage-abstraction/tasks/: WP01-datastore-protocol-and-sqlite.md  WP02-refactor-poller.md  WP03-refactor-features-routes-training.md  WP04-postgres-implementation.md  WP05-app-wiring-config-cleanup.md
kitty-specs/003-model-storage-abstraction/: meta.json  tasks.md
kitty-specs/003-model-storage-abstraction/tasks/: WP01-modelstore-protocol-and-local-impl.md  WP02-s3-model-store.md  WP03-cached-model-store.md  WP03-model-cache-ttl.md  WP04-refactor-model-classes.md  WP05-wire-app-and-trainer.md  WP05-wire-app-startup-and-trainer.md
kitty-specs/004-cloud-training-pipeline/: meta.json  tasks.md
kitty-specs/004-cloud-training-pipeline/tasks/: WP01-cloud-training-entrypoint.md  WP02-per-tenant-training-logic.md  WP03-batch-training-tenant-discovery.md  WP04-concurrent-training-lock.md  WP05-aggregate-model-training.md  WP06-training-observability.md
kitty-specs/005-ml-signal-pipeline/: data-model.md  meta.json  plan.md  research.md  tasks.md
kitty-specs/005-ml-signal-pipeline/tasks/: WP01-datastore-ml-signals.md  WP02-behavior-profile.md  WP03-pattern-detector.md  WP04-next-action-predictor.md  WP05-file-recommender.md  WP06-signal-engine-poller.md  WP07-training-pipeline.md
scripts/: gen_openapi.py
src/sigil_ml/: __init__.py  app.py  cache.py  cli.py  config.py  feature_store.py  features.py  loader.py  plugins.py  poller.py  routes.py  schema.py  server.py  store.py  store_postgres.py  store_sqlite.py  tenant.py
src/sigil_ml/feast_repo/: feature_store.yaml  features.py
src/sigil_ml/feast_repo/data/: online_store.db  registry.db
src/sigil_ml/models/: activity.py  duration.py  fleet_focus.py  fleet_meeting.py  fleet_onboarding.py  fleet_routes.py  quality.py  stuck.py  suggest.py  workflow.py
src/sigil_ml/signals/: __init__.py  engine.py  file_recommender.py  next_action.py  pattern_detector.py  profile.py
src/sigil_ml/storage/: model_store.py
src/sigil_ml/training/: cloud_trainer.py  locking.py  models.py  scheduler.py  synthetic.py  tenant_discovery.py  trainer.py
tasks/: companion-sigil-daemon-changes.md  prd-classify-predict-pipeline.md
tests/: test_cloud_training.py  test_feature_store.py  test_features.py  test_fleet_models.py  test_model_store.py  test_models.py  test_server.py  test_signals.py
