[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sigil-ml"
version = "0.1.0"
description = "ML sidecar for the Sigil developer intelligence daemon"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
sigil-ml = "sigil_ml.server:main"
