[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sigil-ml"
version = "0.1.0"
description = "ML prediction sidecar for the Sigil developer intelligence daemon"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Sigil Contributors" }]
keywords = ["developer-tools", "machine-learning", "productivity", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/sigil-tech/sigil-ml"
Repository = "https://github.com/sigil-tech/sigil-ml"
Issues = "https://github.com/sigil-tech/sigil-ml/issues"
"Sigil Daemon" = "https://github.com/sigil-tech/sigil"

[project.scripts]
sigil-ml = "sigil_ml.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B905",   # zip without strict= (requires 3.10+, fine for us but noisy)
    "SIM105", # contextlib.suppress — try/except pass is clearer in our codebase
    "SIM108", # ternary expression — multi-line if/else is more readable for us
]

[tool.ruff.lint.isort]
known-first-party = ["sigil_ml"]
